# restock-pilot

./: .gitignore  Makefile  README.md  pyproject.toml
dbt/: dbt_project.yml
scripts/: 001_create_tables.sql  002_add_receipts_returns.sql  migrate.sh
scripts/migrations/: 001_init.sql
