[project]
name = "restock-pilot"
version = "0.1.0"
description = "Demand forecasting + reorder recommendations for small sellers."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "prefect>=2.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
